# icons

./: .gitignore  README.md  build.py  environment.yml  icons-config.yaml  pyproject.toml
icons/: __init__.py  base.py  inputs.py  outputs.py  sources.py  utils.py
